<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_label"
            />
    <Button
            android:id="@+id/ingredientsButton"
            android:layout_width="80px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ingredients_button_label"
            android:onClick="clickHandler"
            />

    <Button
            android:id="@+id/recipeButton"
            android:layout_width="80px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/recipes_button_label"
            android:onClick="clickHandler"
            />

    <TextView
            android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        />

        </LinearLayout>