<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_grape"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_label"
    />
    <Button
            android:id="@+id/foodButton"
            android:layout_width="80px"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/food_button_label"
            android:onClick="clickHandler"
            />

    <Button
            android:id="@+id/wineButton"
            android:layout_width="80px"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/wine_button_label"
            android:onClick="clickHandler"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:text="@string/copyright"
            />
</LinearLayout>

